--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo_pagina">MERCADITO DE TECNOLOGIA</h1>
+        <h1 class="titulo_pagina">MERCADITO DE ALCOHOL</h1>
     </header>
     <main>
         <section class="hero">
-
+            <p>¡Página en proceso!</p>
         </section>
         <section class="productos">            
             <div class="grid-producto">
