--- a/index.html
+++ b/index.html
@@ -135,9 +135,8 @@
 
     
     
-
+    <script src="./producto.js">   </script>
     <script src="./app.js">   </script>
-
     <script src="./4entradaysalida.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
