--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -119,8 +119,7 @@
             </div>
         </section>
 
-
-
+        
     </main>
 
 
@@ -154,9 +153,9 @@
     </footer>
 
     
-    <script src="./app.js">   </script>
+    <script src="../app.js">   </script>
 
-    <script src="./4entradaysalida.js"></script>
+    <script src="../4entradaysalida.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
