--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -152,10 +152,10 @@
         <p class="copyright">Copyright © 2018-2023 Mercadito de alcohol. Todos los derechos reservados.</p>
     </footer>
 
-    
+    <script src="../productos.js"></script>
     <script src="../app.js">   </script>
 
-    <script src="../4entradaysalida.js"></script>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
