--- a/pages/compra.html
+++ b/pages/compra.html
@@ -52,9 +52,9 @@
 
 
     <main>
-        <section class="carrito-pag-compra">
-            <div id="carrito-container-en-compra"></div>
-            <div id="total-container"></div>
+        <section id="scrollbar-compra" class="carrito-pag-compra">
+            <div id="carrito-container-en-compra" class="carritoListo"></div>
+            <div id="total-container" class="carritoListo"></div>
         </section>
         <form action="">
             <section class="datos-compra">            
@@ -214,7 +214,7 @@
     </footer>
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../productos.js"></script> 
     <script src="../carritoUsuario.js"></script>
     <script src="../app.js"></script>
