--- a/pages/productos.html
+++ b/pages/productos.html
@@ -537,9 +537,10 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../productos.js"></script>
-    <script src="../carritoUsuario.js"> </script>   
-    <script src="../app.js">   </script>
+    <script src="../archivosJs/usuario.js"></script>
+    <script  src="../archivosJs/productos.js"></script>
+    <script  src="../archivosJs/carritoUsuario.js"> </script>   
+    <script  src="../archivosJs/app.js">   </script>
     
 
     
