--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -69,8 +69,8 @@
                         <div id="flush-collapseOne" class="accordion-collapse collapse"
                             data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body bg-black bg-gradient text-white" style="--bs-bg-opacity: .5;">
-                                Placeholder content for this accordion, which is intended to demonstrate
-                                the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                                Actualmente solo contamos con pagos mediante tarjetas 
+                                American Express, Visa, Mastercard y Mercado Pago.</div>
                         </div>
                     </div>
 
@@ -87,10 +87,8 @@
                         <div id="flush-collapseTwo" class="accordion-collapse collapse"
                             data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body bg-black bg-gradient text-white" style="--bs-bg-opacity: .5;">
-                                Placeholder content for this accordion, which is intended to demonstrate
-                                the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's
-                                imagine
-                                this being filled with some actual content.</div>
+                                Nos aseguramos de que tu pedido llegue en las mejores condiciones mediante
+                                Oca, la demora de estos envíos depende de la lejanía del destino.</div>
                         </div>
                     </div>
 
@@ -101,19 +99,15 @@
                             <button class="accordion-button collapsed bg-black bg-gradient text-white" style="--bs-bg-opacity: .95;" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false"
                                 aria-controls="flush-collapseThree">
-                                Accordion Item #3
+                                Garantía
                             </button>
                         </h2>
                         <div id="flush-collapseThree" class="accordion-collapse collapse"
                             data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body bg-black bg-gradient text-white" style="--bs-bg-opacity: .5;">
-                                Placeholder content for this accordion, which is intended to demonstrate
-                                the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing
-                                more
-                                exciting happening here in terms of content, but just filling up the space to make it look,
-                                at
-                                least at first glance, a bit more representative of how this would look in a real-world
-                                application.</div>
+                                Si tu pedido sufre algún daño que impida su consumo no dudes en
+                                escribirnos en nuestras redes sociales 
+                                para ver cuál es la mejor opción para solucionar el problema.</div>
                         </div>
                     </div>
             </div>
@@ -151,12 +145,7 @@
         </div>
         <p class="copyright">Copyright © 2018-2023 Mercadito de alcohol. Todos los derechos reservados.</p>
     </footer>
-
-    <script src="../productos.js"></script>
-    <script src="../app.js">   </script>
-
-    
-
+      
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
